@@ -3,14 +3,11 @@ plugins {
     id 'com.github.johnrengelman.shadow' version '6.0.0'
     id 'maven-publish'
     id 'com.palantir.git-version' version '0.12.3'
-    id 'com.google.cloud.tools.jib' version '2.6.0'
 }
 
 group = 'com.conveyal'
 // set version to `git describe --tags --always --first-parent`, plus '.dirty' if local changes are present.
 version gitVersion()
-
-jib.to.image = 'ghcr.io/conveyal/r5:' + version
 
 java {
     sourceCompatibility = JavaVersion.VERSION_11
@@ -20,12 +17,12 @@ java {
 jar {
     // For Java 11 Modules, specify a module name.
     // Do not create module-info.java until all our dependencies specify a module name.
-    // Main-Class R5Main will start a worker, BackendMain must be specified on JVM command line to start backend.
+    // Main-Class BackendMain will start a local backend.
     // Build-Jdk-Spec mimics a Maven manifest entry that helps us automatically install the right JVM.
     // Implementation-X attributes are needed for ImageIO (used by Geotools) to initialize in some environments.
     manifest {
         attributes 'Automatic-Module-Name': 'com.conveyal.analysis',
-            'Main-Class': 'com.conveyal.r5.R5Main',
+            'Main-Class': 'com.conveyal.analysis.BackendMain',
             'Build-Jdk-Spec': targetCompatibility.getMajorVersion(),
             'Implementation-Title': 'Conveyal Analysis Backend',
             'Implementation-Vendor': 'Conveyal LLC',
@@ -37,19 +34,26 @@ shadowJar {
     mergeServiceFiles()
 }
 
+// Allow reflective access by Kryo to normally closed Java internals.
+// This is used for testing equality, but also for building automatic Kryo (de)serializers.
 test {
+    jvmArgs = ['--add-opens=java.base/java.io=ALL-UNNAMED',
+               '--add-opens=java.base/java.time=ALL-UNNAMED',
+               '--add-opens=java.base/java.time.zone=ALL-UNNAMED',
+               '--add-opens=java.base/java.lang=ALL-UNNAMED']
     useJUnitPlatform()
 }
 
 // `gradle publish` will upload both shadow and simple JAR to Github Packages
+// On GH Actions, GITHUB_ACTOR env variable is supplied without specifying it in action yml.
 publishing {
     repositories {
         maven {
             name = "GitHubPackages"
             url = uri("https://maven.pkg.github.com/conveyal/r5")
             credentials {
-                username = System.getenv("GPR_USERNAME")
-                password = System.getenv("GPR_TOKEN")
+                username = System.getenv("GITHUB_ACTOR")
+                password = System.getenv("GITHUB_TOKEN")
             }
         }
     }
@@ -74,21 +78,14 @@ task copyDependencies(type: Copy) {
     into 'dependencies'
 }
 
-// Run R5 as an analysis backend with all dependencies on the classpath, without building a shadowJar.
+// Run R5 as a local analysis backend with all dependencies on the classpath, without building a shadowJar.
 task runBackend (type: JavaExec) {
    dependsOn(build)
    classpath(sourceSets.main.runtimeClasspath)
    main("com.conveyal.analysis.BackendMain")
 }
 
-// Run R5 as an analysis worker with all dependencies on the classpath, without building a shadowJar.
-task runWorker (type: JavaExec) {
-   dependsOn(build)
-   classpath(sourceSets.main.runtimeClasspath)
-   main("com.conveyal.r5.R5Main")
-}
-
-// Start up the analysis backend from a shaded JAR and ask it to shut down immediately.
+// Start up an analysis local backend from a shaded JAR and ask it to shut down immediately.
 // This is used to check in the automated build that the JAR is usable before we keep it.
 // Create a configuration properties file (by copying the template) before running this task.
 task testShadowJarRunnable(type: JavaExec) {
@@ -103,15 +100,17 @@ task testShadowJarRunnable(type: JavaExec) {
 task createVersionProperties(dependsOn: processResources) {
     doLast {
         def details = versionDetails()
-        new File(buildDir, "resources/main/version.properties").withWriter { w ->
+        def dir = new File(buildDir, "resources/main/com/conveyal/r5/")
+        mkdir(dir)
+        new File(dir, "version.properties").withWriter { w ->
             Properties p = new Properties()
             p['version'] = project.version.toString()
             p['commit'] = details.gitHashFull
-            p['branch'] = details.branchName
+            p['branch'] = details.branchName ?: "NONE" // avoid NPE when building pushed tag
             p.store w, null
         }
         // Also make a simple one-line version.txt for scripts to use
-        new File(buildDir, "version.txt").text = "$version"
+        new File(dir, "version.txt").text = "$version"
     }
 }
 
@@ -124,12 +123,15 @@ repositories {
     // Put Open Source Geospatial before Maven Central to get JAI core, see https://stackoverflow.com/a/26993223
     maven { url 'https://repo.osgeo.org/repository/release/' }
     mavenCentral()
-    // TODO review whether we really need these repositories
+    // TODO review whether we really need the repositories below
     maven { url 'https://maven.conveyal.com' }
-    // Used for importing java projects from github (why do we need this?)
-    maven { url 'https://jitpack.io' }
     // For the polyline encoder
     maven { url 'https://nexus.axiomalaska.com/nexus/content/repositories/public-releases' }
+}
+
+// Exclude all JUnit 4 transitive dependencies - IntelliJ bug causes it to think we're using Junit 4 instead of 5.
+configurations.all {
+    exclude group: "junit", module: "junit"
 }
 
 dependencies {
@@ -148,7 +150,7 @@ dependencies {
     implementation 'org.mongodb:mongo-java-driver:3.11.0'
 
     // Legacy system for storing Java objects, this functionality is now provided by the MongoDB driver itself.
-    implementation 'org.mongojack:mongojack:2.5.1'
+    implementation 'org.mongojack:mongojack:2.10.1'
 
     // JSON serialization and deserialization from and to Java objects
     implementation 'com.fasterxml.jackson.core:jackson-core:2.10.3'
@@ -161,16 +163,19 @@ dependencies {
     implementation 'com.beust:jcommander:1.30'
 
     // GeoTools provides GIS functionality on top of JTS topology suite.
-    def geotoolsVersion = '21.2'
+    def geotoolsVersion = '25.2'
     implementation group: 'org.geotools', version: geotoolsVersion, name: 'gt-main'
     implementation group: 'org.geotools', version: geotoolsVersion, name: 'gt-opengis'
     implementation group: 'org.geotools', version: geotoolsVersion, name: 'gt-referencing'
     implementation group: 'org.geotools', version: geotoolsVersion, name: 'gt-shapefile'
     implementation group: 'org.geotools', version: geotoolsVersion, name: 'gt-coverage'
-    implementation group: 'org.geotools', version: geotoolsVersion, name: 'gt-geojson'
+    implementation group: 'org.geotools', version: geotoolsVersion, name: 'gt-geojsondatastore'
+    implementation group: 'org.geotools', version: geotoolsVersion, name: 'gt-geopkg'
     implementation group: 'org.geotools', version: geotoolsVersion, name: 'gt-geotiff'
     // Provides the EPSG coordinate reference system catalog as an HSQL database.
     implementation group: 'org.geotools', version: geotoolsVersion, name: 'gt-epsg-hsql'
+
+    implementation 'com.wdtinc:mapbox-vector-tile:3.1.0'
 
     // Legacy JTS with com.vividsolutions package name. Newer Geotools compatible with Java 11 uses a newer version of
     // JTS with the org.locationtech package name. But our MapDB format includes serialized JTS geometries with the
@@ -194,7 +199,7 @@ dependencies {
     implementation 'com.google.guava:guava:28.2-jre'
 
     // Java 8 rewrite of the Guava cache with asynchronous LoadingCaches. We don't currently use the async
-    //capabilities, but Caffeine's LoadingCache syntax is more modern idiomatic Java than Guava's.
+    // capabilities, but Caffeine's LoadingCache syntax is more modern idiomatic Java than Guava's.
     implementation 'com.github.ben-manes.caffeine:caffeine:2.8.1'
 
     implementation ('org.apache.httpcomponents:httpclient:4.5.6') {
@@ -203,11 +208,8 @@ dependencies {
     }
 
     // Persistent storage of files / objects on Amazon S3.
+    // Now used only for Seamless Census TODO eliminate this final AWS dependency
     implementation 'com.amazonaws:aws-java-sdk-s3:1.11.341'
-
-    // Old version of GraphQL-Java used by legacy gtfs-api embedded in analysis-backend.
-    // TODO eliminate GraphQL in future API revisions
-    implementation 'com.graphql-java:graphql-java:2.1.0'
 
     // Commons Math gives us FastMath, MersenneTwister, and low-discrepancy vector generators.
     implementation 'org.apache.commons:commons-math3:3.0'
@@ -230,12 +232,12 @@ dependencies {
 
     implementation 'javax.xml.bind:jaxb-api:2.3.1'
 
-    // Google Protocol Buffers are used in decoding OSM data and seamless census data.
-    implementation 'com.google.protobuf:protobuf-java:2.6.1'
+    // Google Protocol Buffers are used in decoding OSM data and seamless census data (in Geobuf format).
+    // implementation 'com.google.protobuf:protobuf-java:3.13.0'
 
-    // OSM PBF format support. Transitive dependency on Protobuf 3.4.0.
-    // TODO investigate any conflict with above
-    implementation 'org.openstreetmap.osmosis:osmosis-osm-binary:0.45'
+    // OSM PBF format support. Transitive dependency on Protobuf 3.12.2,
+    // align with mapbox-vecor-tile and geobuf generated classes
+    implementation 'org.openstreetmap.osmosis:osmosis-osm-binary:0.48.3'
 
     // Compressed bitmaps (bitsets) used to track which long OSM IDs have been encountered.
     implementation 'org.roaringbitmap:RoaringBitmap:0.7.3'
@@ -245,6 +247,10 @@ dependencies {
     // Java unit testing framework.
     testImplementation(platform('org.junit:junit-bom:5.7.0'))
     testImplementation('org.junit.jupiter:junit-jupiter')
+
+    // Chart drawing library for examining travel time distributions when crafting tests.
+    // Although rarely used it should be low-impact: it is a test-only dependency with no transitive dependenices.
+    testImplementation('org.jfree:jfreechart:1.5.1')
 
 }
 
